--- a/register.html
+++ b/register.html
@@ -16,6 +16,6 @@
         </form>
         <p>Already have an account? <a href="login.html">Login</a></p>
     </div>
-    <script src="js\script2.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
